--- a/background_seperationMKII.ipynb
+++ b/background_seperationMKII.ipynb
@@ -17,6 +17,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "7d5bdfa9-2d7c-4c77-85e6-f3bf3b832bb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# methods to shorten videos\n",
+    "import subprocess\n",
+    "import os\n",
+    "import time\n",
+    "\n",
+    "def cut_video(input_vid, start_seconds, end_seconds):\n",
+    "    \"\"\"\n",
+    "    this method is super fast as it does not rely on encoding and deconding the video into wrappers and uses straight ffmpeg\n",
+    "    \"\"\"\n",
+    "    output_name = input_vid[:-4] + 'short.avi'\n",
+    "    # format seconds into hh:mm:float(ss)\n",
+    "    start_seconds = time.strftime('%H:%M:%S', time.gmtime(start_seconds))\n",
+    "    end_seconds = time.strftime('%H:%M:%S', time.gmtime(end_seconds))\n",
+    "    # command format: 'ffmpeg -ss first_clip -i input_video_string -c copy -t second_clip output_video_string'\n",
+    "    command = 'ffmpeg -ss {} -i {} -c copy -t {} {}'.format(start_seconds, input_vid, end_seconds, output_name)\n",
+    "    # this copies and clips the video. first number clips the first seconds, then clip everything that is seconds after that\n",
+    "    result = subprocess.run(command)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c26d82e2-a1a0-46f9-8192-1ee1ecfedbc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cut_video(r'C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi', 30, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "cbbcaf8e-236a-474f-a6e3-910325355f9c",
    "metadata": {},
@@ -171,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c1d5498-6ae7-4af0-864a-126363d36e4b",
+   "id": "78de2d19-03c9-403d-8f75-2ba38ae0c567",
    "metadata": {},
    "outputs": [],
    "source": []
