--- a/background_seperationMKII.ipynb
+++ b/background_seperationMKII.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "3a172d7c-fbf3-44b3-8543-2506bc74ec60",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
     "import matplotlib.pyplot as plt\n",
     "import napari\n",
     "from PIL import Image\n",
-    "import av"
+    "import av\n",
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "7d5bdfa9-2d7c-4c77-85e6-f3bf3b832bb5",
    "metadata": {},
    "outputs": [],
@@ -27,42 +28,113 @@
     "import os\n",
     "import time\n",
     "\n",
-    "def cut_video(input_vid, start_seconds, end_seconds):\n",
+    "def cut_video(input_vid_dir, input_vid_name, start_seconds, end_seconds, clip_number):\n",
     "    \"\"\"\n",
     "    this method is super fast as it does not rely on encoding and deconding the video into wrappers and uses straight ffmpeg\n",
     "    \"\"\"\n",
-    "    output_name = input_vid[:-4] + 'short.avi'\n",
+    "    output_name = input_vid_name[:-4] + 'short.avi' + \"{:02d}\".format(clip_number+1)  \n",
+    "    \n",
+    "    input_vid = os.path.join(input_vid_dir, input_vid_name)\n",
     "    # format seconds into hh:mm:float(ss)\n",
     "    start_seconds = time.strftime('%H:%M:%S', time.gmtime(start_seconds))\n",
     "    end_seconds = time.strftime('%H:%M:%S', time.gmtime(end_seconds))\n",
     "    # command format: 'ffmpeg -ss first_clip -i input_video_string -c copy -t second_clip output_video_string'\n",
-    "    command = 'ffmpeg -ss {} -i {} -c copy -t {} {}'.format(start_seconds, input_vid, end_seconds, output_name)\n",
+    "    command = 'ffmpeg -ss {} -i {} -c copy -t {} {}'.format(start_seconds, input_vid, end_seconds, output_path)\n",
     "    # this copies and clips the video. first number clips the first seconds, then clip everything that is seconds after that\n",
-    "    result = subprocess.run(command)"
+    "    result = subprocess.run(command)\n",
+    "    return output_name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "c26d82e2-a1a0-46f9-8192-1ee1ecfedbc0",
+   "execution_count": 27,
+   "id": "d524b94d-604f-4f2d-90f3-6ba14d3f09fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cut_video(r'C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi', 30, 10)"
+    "def get_length(filename):\n",
+    "    \"\"\"\n",
+    "    returns length of the video in seconds as a float\n",
+    "    \"\"\"\n",
+    "    result = subprocess.run([\"ffprobe\", \"-v\", \"error\", \"-show_entries\",\n",
+    "                             \"format=duration\", \"-of\",\n",
+    "                             \"default=noprint_wrappers=1:nokey=1\", filename],\n",
+    "        stdout=subprocess.PIPE,\n",
+    "        stderr=subprocess.STDOUT)\n",
+    "    return float(result.stdout)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "cbbcaf8e-236a-474f-a6e3-910325355f9c",
+   "execution_count": 43,
+   "id": "77bbdfe4-d849-49e1-b5aa-aa1cc91d2e35",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_sliced_video(directory, video_for_slicing, division_number):\n",
+    "    \"\"\"\n",
+    "    takes in video, spits out a folder containing shorter clips\n",
+    "    \"\"\"\n",
+    "    video = os.path.join(directory, video_for_slicing)\n",
+    "    # create directoy for short clips\n",
+    "    clip_path = os.path.join(directory, video_for_slicing[:-4] + 'clips')\n",
+    "    os.mkdir(path)\n",
+    "    \n",
+    "    length = get_length(video)\n",
+    "    clip_length = length/division_number\n",
+    "    clip_length = math.floor(clip_length)\n",
+    "    \n",
+    "    for i in range(division_number):\n",
+    "        if i == division_number:\n",
+    "        else:\n",
+    "            start_seconds = clip_length*division_number\n",
+    "            cut_video(input_vid, start_seconds, clip_length, clip_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "3b0c06b9-f460-4ebe-9b0d-22056d9c15d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1558.1, 129)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_sliced_video(r'C:\\Users\\BMLab21\\Documents\\CrabStreams', '2022-04-06.avi', 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8ad86681-3b17-4b09-ab78-ed3d6cb5ff9f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# inputs\n",
-    "video = r'C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-04.avi'\n",
-    "Learning_rate = 1.0/1000\n",
+    "video = r'C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi'\n",
+    "history = 100\n",
+    "Learning_rate = 1.0/history\n",
     "cap = cv2.VideoCapture(video)\n",
     "bg_subtractor = cv2.createBackgroundSubtractorMOG2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c26d82e2-a1a0-46f9-8192-1ee1ecfedbc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_video_loc = cut_video(video, 30, 10)"
    ]
   },
   {
