--- a/background_seperationMKII.ipynb
+++ b/background_seperationMKII.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "3a172d7c-fbf3-44b3-8543-2506bc74ec60",
    "metadata": {},
    "outputs": [],
@@ -28,26 +28,38 @@
     "import os\n",
     "import time\n",
     "\n",
-    "def cut_video(input_vid_dir, input_vid_name, start_seconds, end_seconds, clip_number):\n",
+    "def cut_video(input_vid_dir, input_vid_name, start_seconds, end_seconds, clip_number, clip_path, last_or_no):\n",
     "    \"\"\"\n",
     "    this method is super fast as it does not rely on encoding and deconding the video into wrappers and uses straight ffmpeg\n",
     "    \"\"\"\n",
-    "    output_name = input_vid_name[:-4] + 'short.avi' + \"{:02d}\".format(clip_number+1)  \n",
     "    \n",
-    "    input_vid = os.path.join(input_vid_dir, input_vid_name)\n",
+    "    # create name of video to be outputted\n",
+    "    output_name = input_vid_name[:-4] + 'short_{}.avi'.format(\"{:02d}\".format(clip_number+1))\n",
+    "    output_path = os.path.join(clip_path, output_name)\n",
+    "    \n",
+    "    # create name of video to be outputted\n",
+    "    input_vid_path = os.path.join(input_vid_dir, input_vid_name)\n",
+    "    \n",
     "    # format seconds into hh:mm:float(ss)\n",
     "    start_seconds = time.strftime('%H:%M:%S', time.gmtime(start_seconds))\n",
     "    end_seconds = time.strftime('%H:%M:%S', time.gmtime(end_seconds))\n",
+    "    \n",
     "    # command format: 'ffmpeg -ss first_clip -i input_video_string -c copy -t second_clip output_video_string'\n",
-    "    command = 'ffmpeg -ss {} -i {} -c copy -t {} {}'.format(start_seconds, input_vid, end_seconds, output_path)\n",
+    "    \n",
+    "    if last_or_no == False:\n",
+    "        command = 'ffmpeg -ss {} -i {} -c copy -t {} {}'.format(start_seconds, input_vid_path, end_seconds, output_path)\n",
+    "        print(command)\n",
+    "    else:\n",
+    "        command = 'ffmpeg -ss {} -i {} -c copy {}'.format(start_seconds, input_vid_path, output_path)\n",
+    "        print(command)\n",
     "    # this copies and clips the video. first number clips the first seconds, then clip everything that is seconds after that\n",
-    "    result = subprocess.run(command)\n",
-    "    return output_name"
+    "    \n",
+    "    result = subprocess.run(command)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "d524b94d-604f-4f2d-90f3-6ba14d3f09fe",
    "metadata": {},
    "outputs": [],
@@ -66,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 85,
    "id": "77bbdfe4-d849-49e1-b5aa-aa1cc91d2e35",
    "metadata": {},
    "outputs": [],
@@ -76,36 +88,42 @@
     "    takes in video, spits out a folder containing shorter clips\n",
     "    \"\"\"\n",
     "    video = os.path.join(directory, video_for_slicing)\n",
-    "    # create directoy for short clips\n",
-    "    clip_path = os.path.join(directory, video_for_slicing[:-4] + 'clips')\n",
-    "    os.mkdir(path)\n",
     "    \n",
+    "    # create directoy for short clips\n",
+    "    clip_path = os.path.join(directory, video_for_slicing[:-4] + '_clips')\n",
+    "    os.mkdir(clip_path)\n",
+    "    \n",
+    "    # get length of video and length of clips based on the number of clips we want\n",
     "    length = get_length(video)\n",
     "    clip_length = length/division_number\n",
     "    clip_length = math.floor(clip_length)\n",
     "    \n",
-    "    for i in range(division_number):\n",
-    "        if i == division_number:\n",
+    "    # enumerate through clip numbers writing each one to the short clip directory\n",
+    "    for clip_number in range(division_number):\n",
+    "        \n",
+    "        start_seconds = clip_length*division_number\n",
+    "        \n",
+    "        if clip_number == division_number-1:\n",
+    "            cut_video(directory, video_for_slicing, start_seconds, clip_length, clip_number, clip_path, True)\n",
+    "            \n",
     "        else:\n",
-    "            start_seconds = clip_length*division_number\n",
-    "            cut_video(input_vid, start_seconds, clip_length, clip_number)"
+    "            cut_video(directory, video_for_slicing, start_seconds, clip_length, clip_number, clip_path, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "3b0c06b9-f460-4ebe-9b0d-22056d9c15d7",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(1558.1, 129)"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ffmpeg -ss 00:00:00 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:02:09 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_01.avi\n",
+      "ffmpeg -ss 00:00:12 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:02:09 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_02.avi\n",
+      "ffmpeg -ss 00:00:24 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:02:09 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_03.avi\n"
+     ]
     }
    ],
    "source": [
