--- a/background_seperationMKII.ipynb
+++ b/background_seperationMKII.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3a172d7c-fbf3-44b3-8543-2506bc74ec60",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7d5bdfa9-2d7c-4c77-85e6-f3bf3b832bb5",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d524b94d-604f-4f2d-90f3-6ba14d3f09fe",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 9,
    "id": "77bbdfe4-d849-49e1-b5aa-aa1cc91d2e35",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
     "    # enumerate through clip numbers writing each one to the short clip directory\n",
     "    for clip_number in range(division_number):\n",
     "        \n",
-    "        start_seconds = clip_length*division_number\n",
+    "        start_seconds = clip_length*clip_number\n",
     "        \n",
     "        if clip_number == division_number-1:\n",
     "            cut_video(directory, video_for_slicing, start_seconds, clip_length, clip_number, clip_path, True)\n",
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3b0c06b9-f460-4ebe-9b0d-22056d9c15d7",
    "metadata": {},
    "outputs": [
@@ -120,9 +120,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ffmpeg -ss 00:00:00 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:02:09 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_01.avi\n",
-      "ffmpeg -ss 00:00:12 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:02:09 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_02.avi\n",
-      "ffmpeg -ss 00:00:24 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:02:09 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_03.avi\n"
+      "ffmpeg -ss 00:00:00 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_01.avi\n",
+      "ffmpeg -ss 00:00:21 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_02.avi\n",
+      "ffmpeg -ss 00:00:42 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_03.avi\n",
+      "ffmpeg -ss 00:01:03 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_04.avi\n",
+      "ffmpeg -ss 00:01:24 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_05.avi\n",
+      "ffmpeg -ss 00:01:45 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_06.avi\n",
+      "ffmpeg -ss 00:02:06 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_07.avi\n",
+      "ffmpeg -ss 00:02:27 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_08.avi\n",
+      "ffmpeg -ss 00:02:48 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_09.avi\n",
+      "ffmpeg -ss 00:03:09 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_10.avi\n",
+      "ffmpeg -ss 00:03:30 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_11.avi\n",
+      "ffmpeg -ss 00:03:51 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_12.avi\n"
      ]
     }
    ],
