--- a/video_chunking.ipynb
+++ b/video_chunking.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "3a172d7c-fbf3-44b3-8543-2506bc74ec60",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cv2\n",
+    "import pims\n",
     "import numpy as np\n",
+    "import subprocess\n",
+    "import os\n",
+    "import time\n",
+    "import math\n",
     "import matplotlib.pyplot as plt\n",
-    "import napari\n",
-    "from PIL import Image\n",
-    "import av\n",
-    "import math"
+    "import cv2"
    ]
   },
   {
@@ -24,9 +25,6 @@
    "outputs": [],
    "source": [
     "# methods to shorten videos\n",
-    "import subprocess\n",
-    "import os\n",
-    "import time\n",
     "\n",
     "def cut_video(input_vid_dir, input_vid_name, start_seconds, end_seconds, clip_number, clip_path, last_or_no):\n",
     "    \"\"\"\n",
@@ -78,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "77bbdfe4-d849-49e1-b5aa-aa1cc91d2e35",
    "metadata": {},
    "outputs": [],
@@ -112,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "3b0c06b9-f460-4ebe-9b0d-22056d9c15d7",
    "metadata": {},
    "outputs": [
@@ -120,193 +118,156 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ffmpeg -ss 00:00:00 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_01.avi\n",
-      "ffmpeg -ss 00:00:21 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_02.avi\n",
-      "ffmpeg -ss 00:00:42 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_03.avi\n",
-      "ffmpeg -ss 00:01:03 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_04.avi\n",
-      "ffmpeg -ss 00:01:24 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_05.avi\n",
-      "ffmpeg -ss 00:01:45 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_06.avi\n",
-      "ffmpeg -ss 00:02:06 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_07.avi\n",
-      "ffmpeg -ss 00:02:27 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_08.avi\n",
-      "ffmpeg -ss 00:02:48 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_09.avi\n",
-      "ffmpeg -ss 00:03:09 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_10.avi\n",
-      "ffmpeg -ss 00:03:30 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_11.avi\n",
-      "ffmpeg -ss 00:03:51 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi -c copy C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_clips\\2022-04-06short_12.avi\n"
+      "ffmpeg -ss 00:00:00 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264_clips\\2022-04-06_264short_01.avi\n",
+      "ffmpeg -ss 00:00:21 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264_clips\\2022-04-06_264short_02.avi\n",
+      "ffmpeg -ss 00:00:42 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264_clips\\2022-04-06_264short_03.avi\n",
+      "ffmpeg -ss 00:01:03 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264_clips\\2022-04-06_264short_04.avi\n",
+      "ffmpeg -ss 00:01:24 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264_clips\\2022-04-06_264short_05.avi\n",
+      "ffmpeg -ss 00:01:45 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264_clips\\2022-04-06_264short_06.avi\n",
+      "ffmpeg -ss 00:02:06 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264_clips\\2022-04-06_264short_07.avi\n",
+      "ffmpeg -ss 00:02:27 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264_clips\\2022-04-06_264short_08.avi\n",
+      "ffmpeg -ss 00:02:48 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264_clips\\2022-04-06_264short_09.avi\n",
+      "ffmpeg -ss 00:03:09 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264_clips\\2022-04-06_264short_10.avi\n",
+      "ffmpeg -ss 00:03:30 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264.avi -c copy -t 00:00:21 C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264_clips\\2022-04-06_264short_11.avi\n",
+      "ffmpeg -ss 00:03:51 -i C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264.avi -c copy C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264_clips\\2022-04-06_264short_12.avi\n"
      ]
     }
    ],
    "source": [
-    "create_sliced_video(r'C:\\Users\\BMLab21\\Documents\\CrabStreams', '2022-04-06.avi', 12)"
+    "create_sliced_video(r'C:\\Users\\BMLab21\\Documents\\CrabStreams', '2022-04-06_264.avi', 12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "8ad86681-3b17-4b09-ab78-ed3d6cb5ff9f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# inputs\n",
-    "video = r'C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06.avi'\n",
-    "history = 100\n",
-    "Learning_rate = 1.0/history\n",
-    "cap = cv2.VideoCapture(video)\n",
-    "bg_subtractor = cv2.createBackgroundSubtractorMOG2()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "c26d82e2-a1a0-46f9-8192-1ee1ecfedbc0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_video_loc = cut_video(video, 30, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "197647b7-4a09-4ff0-be31-2d2ea5a16783",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "ret, frame_1 = cap.read()\n",
-    "viewer = napari.view_image(frame_1, rgb=True) # 1.labels, 2.paint, 3.fill, 4.export as date e.g. desktop/arena shapes/2022_04_01.tif"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "c27f63d5-3edf-444e-9112-eb82fa4c531e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arena_shape = Image.open(r'C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-04_arenaMask.tif')\n",
-    "arena_mask = np.dstack([arena_shape,arena_shape,arena_shape])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f4a53d6-89e6-49d6-ab50-cc698904c16f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "total_events = []\n",
-    "frame_n = 0\n",
-    "while(True):\n",
-    "    ret, frame = cap.read()\n",
-    "    if ret == True:\n",
-    "        if frame_n % 5000 == 0:\n",
-    "            print(frame_n)\n",
-    "        frame_n +=1\n",
-    "        img = np.asarray(frame) * arena_mask\n",
-    "        mask = bg_subtractor.apply(img, learningRate=Learning_rate) \n",
-    "        mask = cv2.cvtColor(mask, cv2.COLOR_GRAY2BGR)\n",
-    "        event_frame = int(np.sum(mask))\n",
-    "        total_events.append(event_frame)\n",
-    "    else:\n",
-    "        break\n",
-    "\n",
-    "cap.release()\n",
-    "cv2.destroyAllWindows()\n",
-    "total_events = np.array(total_events)\n",
-    "print('frames:', frame_n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b0c3680-1e14-4dde-9d79-4b63c9858ba1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = 0\n",
-    "events_p1000 = total_events[a:]\n",
-    "plt.plot(events_p1000)\n",
-    "#plt.plot(np.where(events_p1000>6000))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "8691ba3c-bc35-467f-80d6-33c94be92f39",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "when_events = np.where(events_p1000>5000)\n",
-    "indexed_events = np.zeros(len(events_p1000))\n",
-    "\n",
-    "for events in when_events[0]:\n",
-    "    indexed_events[events:events+100] = 1\n",
-    "    \n",
-    "indexed_events = np.hstack([np.zeros(1000), indexed_events[:len(events_p1000)]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "ba04725a-b4ea-45fa-91a4-2c5d55a56156",
+   "execution_count": 13,
+   "id": "78de2d19-03c9-403d-8f75-2ba38ae0c567",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9904"
+       "<Frames>\n",
+       "Source: C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264_clips\\2022-04-06_264short_01.avi\n",
+       "Length: 170 frames\n",
+       "Frame Shape: (1080, 1920, 3)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(indexed_events)"
+    "directory = r'C:\\Users\\BMLab21\\Documents\\CrabStreams\\2022-04-06_264_clips'\n",
+    "video_name = '2022-04-06_264short_01.avi'\n",
+    "path = os.path.join(directory, video_name)\n",
+    "vid = pims.PyAVReaderIndexed(path)\n",
+    "vid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "472ab611-cd93-4c54-89d8-d76fe1502ed6",
+   "execution_count": 33,
+   "id": "989de01b-f9b2-4a78-8b20-2a5e69158d3f",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.992537021636963\n"
+     ]
+    }
+   ],
    "source": [
-    "cap = cv2.VideoCapture(video)\n",
-    "\n",
-    "frame_width = int(cap.get(3))\n",
-    "frame_height = int(cap.get(4))\n",
-    "\n",
-    "size = (frame_width, frame_height)\n",
-    "\n",
-    "result = cv2.VideoWriter(r'C:\\Users\\BMLab21\\Desktop\\background_test.avi', \n",
-    "                         cv2.VideoWriter_fourcc(*'MJPG'), # fourcc is how openCV finds the codec # MJPG is the codec\n",
-    "                         30, size)\n",
-    "iteration = 0\n",
-    "\n",
-    "while(iteration<len(indexed_events)-1):\n",
-    "    iteration+=1\n",
-    "    event = indexed_events[iteration]\n",
+    "time1 = time.time()\n",
+    "v_array = np.array(vid)\n",
+    "mean = np.mean(v_array, axis=3)\n",
+    "time2 = time.time()\n",
+    "print(time2-time1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6477baf6-cc54-41d5-80e3-76ce74f9cbda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(170, 1080, 1920)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "66bfb8a6-e519-4de1-8f93-f313790ab84f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.838150024414062\n"
+     ]
+    }
+   ],
+   "source": [
+    "time1 = time.time()\n",
+    "cap = cv2.VideoCapture(path)\n",
+    "mean = []\n",
+    "while(True):\n",
     "    ret, frame = cap.read()\n",
     "    if ret == True:\n",
-    "        if event == 1:\n",
-    "            result.write(frame)\n",
+    "        img = np.asarray(frame)\n",
+    "        mean.append(np.mean(img, axis=2))\n",
     "    else:\n",
     "        break\n",
     "\n",
     "cap.release()\n",
-    "result.release()\n",
-    "cv2.destroyAllWindows()"
+    "cv2.destroyAllWindows()\n",
+    "mean = np.array(mean)\n",
+    "time2 = time.time()\n",
+    "print(time2-time1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0d9f77d9-4bb0-4cbe-964b-6b95c364c26c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(170, 1080, 1920)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78de2d19-03c9-403d-8f75-2ba38ae0c567",
+   "id": "50d0d37c-b5d6-4c7d-bbbb-a3b1fec46dda",
    "metadata": {},
    "outputs": [],
    "source": []
